[package]
name = "red"
version = "0.1.0"
authors = ["0x28"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.102"
termios = "0.3.3"
signal-hook = "0.3.10"

[dev-dependencies]
proptest = "1.0.0"
tempfile = "3.2.0"
